test_case/rust-lang_rust/51415_399143442.rs
rust
fn main() {
    let a = vec![String::from("a")];
    let opt = a.iter().enumerate().find(|param| {
        let (_, &s) = param; //~ ERROR
        *s == String::from("d")
    }).map(|(i, _)| i);
    println!("{:?}", opt);
}
